2005-10-31  Tom Tromey  <tromey@redhat.com>

	* model/wildcard.cc (get_pretty_name): New method.
	* model/wildcard.hh (model_wildcard::get_pretty_name): No longer
	inline.

2005-10-28  Tom Tromey  <tromey@redhat.com>

	* model/classinst.cc (apply_type_map): Updated for new
	model_parameters iterator methods.
	(get_signature_map_fragment): Likewise.
	(get_pretty_name): New method.
	* model/classinst.hh (model_class_instance::get_pretty_name):
	Declare.
	* model/class.hh (model_class::get_pretty_name): Now virtual.

2005-10-27  Tom Tromey  <tromey@redhat.com>

	* model/wildcard.cc (contains_p): New method.
	* model/wildcard.hh (model_wildcard::contains_p): Declare.
	* conversions.hh (capture_conversion): Declare.
	* conversions.cc (capture_conversion): New function.
	(widen_instantiation): Likewise.
	(widening_reference_conversion): Use widen_instantiation.
	* model/class.hh (model_class::create_instance): Changed return
	type.
	(model_class::contains_p): Declare.
	* model/class.cc (create_instance): Updated.
	(contains_p): New method.

2005-10-27  Tom Tromey  <tromey@redhat.com>

	* model/parameters.cc (create_type_map): Added assert.
	* model/classref.cc (resolve): Correctly use boxing_conversion.

2005-10-26  Tom Tromey  <tromey@redhat.com>

	* compiler.cc (compiler): Default to 1.4 language.
	* model/classref.cc (resolve): Use correct type for generic
	class.

2005-10-26  Tom Tromey  <tromey@redhat.com>

	* unify.cc (unifier::compute_lcta): Handle case of two unbound
	wildcards.
	(unifier::unify): Handle case where 'actual' is a raw type.
	(unifier::compute_super_types): Resolve classes of 'klass'.

2005-10-26  Tom Tromey  <tromey@redhat.com>

	* model/import.cc (resolve): Error if name is not canonical.
	* model/class.cc (get_canonical_name): New method.
	* model/class.hh (model_class::get_canonical_name): Declare.

2005-10-26  Tom Tromey  <tromey@redhat.com>

	* compiler.cc (do_analyze_unit): Catch exceptions from
	check_imports.
