@@ -197,9 +197,10 @@ widen_instantiation (model_class *to, model_class *from)
       return false;
     }
 
-  // Now we check 'contains' of each type argument.  FIXME: we should
-  // perform capture conversion or equivalent on 'from'.
-  model_class_instance *from_i = assert_cast<model_class_instance *> (from);
+  // Now we check 'contains' of each type argument.
+  model_class_instance *from_i
+    = capture_conversion (from /* FIXME */,
+			  assert_cast<model_class_instance *> (from));
   model_class_instance *to_i = assert_cast<model_class_instance *> (to);
   std::list<model_class *> from_args, to_args;
   from_i->get_type_map (from_args);
